// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`P6ConnectionForm - Snapshot Tests > matches snapshot for initial state 1`] = `
<div>
  <main
    aria-label="P6 Connection Setup"
    class="min-h-screen bg-white dark:bg-slate-900 flex flex-col items-center justify-center p-8"
    role="main"
  >
    <div
      class="max-w-lg w-full"
    >
      <div
        class="mb-8 text-center"
      >
        <p
          class="text-sm text-slate-500 dark:text-slate-400"
        >
          <span>
            Step 2
          </span>
           
          <span>
            of 5
          </span>
        </p>
        <h1
          class="text-2xl font-bold text-slate-900 dark:text-white mt-2"
        >
          Connect to Primavera P6
        </h1>
        <p
          class="mt-2 text-slate-600 dark:text-slate-400"
        >
          Enter your P6 SOAP API credentials to connect
        </p>
      </div>
      <form
        class="space-y-4"
      >
        <div
          class="mb-4"
        >
          <label
            class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-1"
            for="_r_s_-wsdl-url"
          >
            WSDL Base URL
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="
          w-full px-4 py-2 rounded-lg border
          border-slate-300 dark:border-slate-600 focus:ring-blue-200
          bg-white dark:bg-slate-800
          text-slate-900 dark:text-white
          focus:outline-none focus:ring-2
          transition-colors duration-200
        "
            id="_r_s_-wsdl-url"
            placeholder="https://p6server.company.com/p6ws/services/"
            type="url"
            value=""
          />
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-1"
            for="_r_s_-database"
          >
            Database Instance
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="
          w-full px-4 py-2 rounded-lg border
          border-slate-300 dark:border-slate-600 focus:ring-blue-200
          bg-white dark:bg-slate-800
          text-slate-900 dark:text-white
          focus:outline-none focus:ring-2
          transition-colors duration-200
        "
            id="_r_s_-database"
            placeholder="PMDB"
            type="text"
            value=""
          />
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-1"
            for="_r_s_-username"
          >
            Username
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="
          w-full px-4 py-2 rounded-lg border
          border-slate-300 dark:border-slate-600 focus:ring-blue-200
          bg-white dark:bg-slate-800
          text-slate-900 dark:text-white
          focus:outline-none focus:ring-2
          transition-colors duration-200
        "
            id="_r_s_-username"
            placeholder="p6admin"
            type="text"
            value=""
          />
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-1"
            for="_r_s_-password"
          >
            Password
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="
          w-full px-4 py-2 rounded-lg border
          border-slate-300 dark:border-slate-600 focus:ring-blue-200
          bg-white dark:bg-slate-800
          text-slate-900 dark:text-white
          focus:outline-none focus:ring-2
          transition-colors duration-200
        "
            id="_r_s_-password"
            type="password"
            value=""
          />
        </div>
        <div
          class="pt-4"
        >
          <button
            class="
                w-full inline-flex items-center justify-center gap-2
                px-6 py-3 rounded-lg font-medium
                transition-all duration-200
                bg-slate-100 dark:bg-slate-800 text-slate-900 dark:text-white hover:bg-slate-200 dark:hover:bg-slate-700
                focus:outline-none focus:ring-2 focus:ring-blue-200
              "
            type="submit"
          >
            <span>
              Test Connection
            </span>
          </button>
        </div>
      </form>
      <div
        class="mt-8 flex gap-4"
      >
        <button
          class="
              flex-1 px-6 py-3 rounded-lg font-medium
              bg-white dark:bg-slate-800
              text-slate-700 dark:text-slate-300
              border border-slate-300 dark:border-slate-600
              hover:bg-slate-50 dark:hover:bg-slate-700
              focus:outline-none focus:ring-2 focus:ring-blue-200
              transition-all duration-200
            "
          type="button"
        >
          Back
        </button>
        <button
          class="
              flex-1 px-6 py-3 rounded-lg font-medium
              transition-all duration-200
              focus:outline-none focus:ring-2 focus:ring-blue-200
              bg-slate-100 dark:bg-slate-800 text-slate-400 cursor-not-allowed
            "
          disabled=""
          type="button"
        >
          Continue
        </button>
      </div>
    </div>
  </main>
</div>
`;

exports[`P6ConnectionForm - Snapshot Tests > matches snapshot with success result 1`] = `
<div>
  <main
    aria-label="P6 Connection Setup"
    class="min-h-screen bg-white dark:bg-slate-900 flex flex-col items-center justify-center p-8"
    role="main"
  >
    <div
      class="max-w-lg w-full"
    >
      <div
        class="mb-8 text-center"
      >
        <p
          class="text-sm text-slate-500 dark:text-slate-400"
        >
          <span>
            Step 2
          </span>
           
          <span>
            of 5
          </span>
        </p>
        <h1
          class="text-2xl font-bold text-slate-900 dark:text-white mt-2"
        >
          Connect to Primavera P6
        </h1>
        <p
          class="mt-2 text-slate-600 dark:text-slate-400"
        >
          Enter your P6 SOAP API credentials to connect
        </p>
      </div>
      <form
        class="space-y-4"
      >
        <div
          class="mb-4"
        >
          <label
            class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-1"
            for="_r_u_-wsdl-url"
          >
            WSDL Base URL
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="
          w-full px-4 py-2 rounded-lg border
          border-slate-300 dark:border-slate-600 focus:ring-blue-200
          bg-white dark:bg-slate-800
          text-slate-900 dark:text-white
          focus:outline-none focus:ring-2
          transition-colors duration-200
        "
            id="_r_u_-wsdl-url"
            placeholder="https://p6server.company.com/p6ws/services/"
            type="url"
            value="https://p6.acme-epc.com/p6ws/services/"
          />
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-1"
            for="_r_u_-database"
          >
            Database Instance
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="
          w-full px-4 py-2 rounded-lg border
          border-slate-300 dark:border-slate-600 focus:ring-blue-200
          bg-white dark:bg-slate-800
          text-slate-900 dark:text-white
          focus:outline-none focus:ring-2
          transition-colors duration-200
        "
            id="_r_u_-database"
            placeholder="PMDB"
            type="text"
            value="PMDB"
          />
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-1"
            for="_r_u_-username"
          >
            Username
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="
          w-full px-4 py-2 rounded-lg border
          border-slate-300 dark:border-slate-600 focus:ring-blue-200
          bg-white dark:bg-slate-800
          text-slate-900 dark:text-white
          focus:outline-none focus:ring-2
          transition-colors duration-200
        "
            id="_r_u_-username"
            placeholder="p6admin"
            type="text"
            value="admin"
          />
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-1"
            for="_r_u_-password"
          >
            Password
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="
          w-full px-4 py-2 rounded-lg border
          border-slate-300 dark:border-slate-600 focus:ring-blue-200
          bg-white dark:bg-slate-800
          text-slate-900 dark:text-white
          focus:outline-none focus:ring-2
          transition-colors duration-200
        "
            id="_r_u_-password"
            type="password"
            value="secret123"
          />
        </div>
        <div
          class="pt-4"
        >
          <button
            class="
                w-full inline-flex items-center justify-center gap-2
                px-6 py-3 rounded-lg font-medium
                transition-all duration-200
                bg-slate-100 dark:bg-slate-800 text-slate-900 dark:text-white hover:bg-slate-200 dark:hover:bg-slate-700
                focus:outline-none focus:ring-2 focus:ring-blue-200
              "
            type="submit"
          >
            <span>
              Test Connection
            </span>
          </button>
        </div>
      </form>
      <div
        class="mt-6"
      >
        <div
          class="p-4 rounded-lg bg-green-50 dark:bg-green-900/20 border border-green-200 dark:border-green-800"
          role="alert"
        >
          <p
            class="font-medium text-green-800 dark:text-green-200"
          >
            Connection successful
          </p>
          <div
            class="mt-2 text-sm text-green-700 dark:text-green-300 space-y-1"
          >
            <p>
              Found 
              42
               projects
            </p>
            <p>
              Version: 
              P6 EPPM 21.12
            </p>
            <p>
              Latency: 
              150
               ms
            </p>
          </div>
        </div>
      </div>
      <div
        class="mt-8 flex gap-4"
      >
        <button
          class="
              flex-1 px-6 py-3 rounded-lg font-medium
              bg-white dark:bg-slate-800
              text-slate-700 dark:text-slate-300
              border border-slate-300 dark:border-slate-600
              hover:bg-slate-50 dark:hover:bg-slate-700
              focus:outline-none focus:ring-2 focus:ring-blue-200
              transition-all duration-200
            "
          type="button"
        >
          Back
        </button>
        <button
          class="
              flex-1 px-6 py-3 rounded-lg font-medium
              transition-all duration-200
              focus:outline-none focus:ring-2 focus:ring-blue-200
              bg-blue-600 hover:bg-blue-700 text-white
            "
          type="button"
        >
          Continue
        </button>
      </div>
    </div>
  </main>
</div>
`;

exports[`P6ConnectionForm - Snapshot Tests > matches snapshot with validation errors 1`] = `
<div>
  <main
    aria-label="P6 Connection Setup"
    class="min-h-screen bg-white dark:bg-slate-900 flex flex-col items-center justify-center p-8"
    role="main"
  >
    <div
      class="max-w-lg w-full"
    >
      <div
        class="mb-8 text-center"
      >
        <p
          class="text-sm text-slate-500 dark:text-slate-400"
        >
          <span>
            Step 2
          </span>
           
          <span>
            of 5
          </span>
        </p>
        <h1
          class="text-2xl font-bold text-slate-900 dark:text-white mt-2"
        >
          Connect to Primavera P6
        </h1>
        <p
          class="mt-2 text-slate-600 dark:text-slate-400"
        >
          Enter your P6 SOAP API credentials to connect
        </p>
      </div>
      <form
        class="space-y-4"
      >
        <div
          class="mb-4"
        >
          <label
            class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-1"
            for="_r_t_-wsdl-url"
          >
            WSDL Base URL
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <input
            aria-describedby="_r_t_-wsdl-error"
            aria-invalid="true"
            aria-required="true"
            class="
          w-full px-4 py-2 rounded-lg border
          border-red-500 focus:ring-red-200
          bg-white dark:bg-slate-800
          text-slate-900 dark:text-white
          focus:outline-none focus:ring-2
          transition-colors duration-200
        "
            id="_r_t_-wsdl-url"
            placeholder="https://p6server.company.com/p6ws/services/"
            type="url"
            value=""
          />
          <p
            class="mt-1 text-sm text-red-500"
            id="_r_t_-wsdl-error"
            role="alert"
          >
            WSDL URL is required
          </p>
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-1"
            for="_r_t_-database"
          >
            Database Instance
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <input
            aria-describedby="_r_t_-database-error"
            aria-invalid="true"
            aria-required="true"
            class="
          w-full px-4 py-2 rounded-lg border
          border-red-500 focus:ring-red-200
          bg-white dark:bg-slate-800
          text-slate-900 dark:text-white
          focus:outline-none focus:ring-2
          transition-colors duration-200
        "
            id="_r_t_-database"
            placeholder="PMDB"
            type="text"
            value=""
          />
          <p
            class="mt-1 text-sm text-red-500"
            id="_r_t_-database-error"
            role="alert"
          >
            Database instance is required
          </p>
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-1"
            for="_r_t_-username"
          >
            Username
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <input
            aria-describedby="_r_t_-username-error"
            aria-invalid="true"
            aria-required="true"
            class="
          w-full px-4 py-2 rounded-lg border
          border-red-500 focus:ring-red-200
          bg-white dark:bg-slate-800
          text-slate-900 dark:text-white
          focus:outline-none focus:ring-2
          transition-colors duration-200
        "
            id="_r_t_-username"
            placeholder="p6admin"
            type="text"
            value=""
          />
          <p
            class="mt-1 text-sm text-red-500"
            id="_r_t_-username-error"
            role="alert"
          >
            Username is required
          </p>
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-1"
            for="_r_t_-password"
          >
            Password
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <input
            aria-describedby="_r_t_-password-error"
            aria-invalid="true"
            aria-required="true"
            class="
          w-full px-4 py-2 rounded-lg border
          border-red-500 focus:ring-red-200
          bg-white dark:bg-slate-800
          text-slate-900 dark:text-white
          focus:outline-none focus:ring-2
          transition-colors duration-200
        "
            id="_r_t_-password"
            type="password"
            value=""
          />
          <p
            class="mt-1 text-sm text-red-500"
            id="_r_t_-password-error"
            role="alert"
          >
            Password is required
          </p>
        </div>
        <div
          class="pt-4"
        >
          <button
            class="
                w-full inline-flex items-center justify-center gap-2
                px-6 py-3 rounded-lg font-medium
                transition-all duration-200
                bg-slate-100 dark:bg-slate-800 text-slate-900 dark:text-white hover:bg-slate-200 dark:hover:bg-slate-700
                focus:outline-none focus:ring-2 focus:ring-blue-200
              "
            type="submit"
          >
            <span>
              Test Connection
            </span>
          </button>
        </div>
      </form>
      <div
        class="mt-8 flex gap-4"
      >
        <button
          class="
              flex-1 px-6 py-3 rounded-lg font-medium
              bg-white dark:bg-slate-800
              text-slate-700 dark:text-slate-300
              border border-slate-300 dark:border-slate-600
              hover:bg-slate-50 dark:hover:bg-slate-700
              focus:outline-none focus:ring-2 focus:ring-blue-200
              transition-all duration-200
            "
          type="button"
        >
          Back
        </button>
        <button
          class="
              flex-1 px-6 py-3 rounded-lg font-medium
              transition-all duration-200
              focus:outline-none focus:ring-2 focus:ring-blue-200
              bg-slate-100 dark:bg-slate-800 text-slate-400 cursor-not-allowed
            "
          disabled=""
          type="button"
        >
          Continue
        </button>
      </div>
    </div>
  </main>
</div>
`;
